2008-01-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-main.c (clutter_do_event): Check the
	return value of the ::event signal for the CLUTTER_DELETE
	event type.

	* clutter/clutter-stage.c (clutter_stage_event): Emit the
	::event signal when receiving the CLUTTER_DELETE event; this
	allows to intercept the user's closing of the stage window.

2007-01-18  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-fixed.h:
	Added missing proto for clutter_fixed_qdivx().

2007-01-18  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-fixed.h:
	* clutter/clutter-fixed.c:
	Added CLUTTER_QDIV() for 64-bit division (bug 564, patch by
	Gwenole Beauchesne).

2008-01-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-event.h: Add a gunichar field for the Unicode
	representation of the key. (#555)

2008-01-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.h:
	* clutter/clutter-script.h:
	* clutter/clutter-stage.h:
	* clutter/clutter-units.h: Documentation fixes and additions.

2008-01-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter.symbols: Add ClutterBehaviourOpacity accessors.

	* clutter/clutter-behaviour-opacity.h:
	* clutter/clutter-behaviour-opacity.c:
	(clutter_behaviour_opacity_set_bounds),
	(clutter_behaviour_opacity_get_bounds): Add accessors for the
	opacity-start and opacity-end properties.

	* clutter/clutter-behaviour-scale.h: Fix the argument name to
	avoid complaints by gtk-doc.

2008-01-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-scale.c:
	(clutter_behaviour_scale_set_gravity): Notify on the right property
	name.

2008-01-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter.symbols: Add new ClutterBehaviourScale setters.

	* clutter/clutter-behaviour-scale.[ch]: Split the scaling factors
	on both axis. Add setters for all the behaviour properties.

	* clutter/clutter-effect.h:
	* clutter/clutter-effect.c (clutter_effect_scale): Split the